--- a/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="p-4 shadow bg-white" style="overflow-x: auto; overflow-y: hidden;">
-        <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="80%">
+        <table id="table" class="table table-striped table-bordered display table-hover table-viajes">
             <thead>
                 <tr>
                     <th>Nombre</th>
