--- a/KLS_WEB/KLS_WEB/Views/Clients/Box/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Box/Index.cshtml
@@ -214,7 +214,7 @@
                         $("#D_Opcional").val(res.d_Opcional);
                         $("#Id_Transportista").val(res.id_Transportista);
                         $("#M_Opcional").val(res.m_Opcional);
-                        $("#Notas").val(res.motas);
+                        $("#Notas").val(res.notas);
                         $("#Tp_Opcional").val(res.tp_Opcional);
                         $("#V_Opcional").val(res.v_Opcional);
                     } else {
