--- a/KLS_WEB/KLS_WEB/Views/Clients/Destinations/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Destinations/Index.cshtml
@@ -104,6 +104,12 @@
                             </div>
                         </div>
                         <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="">Hora de atención</label>
+                                <input type="time" class="form-control" name="HoraAtencion" id="HoraAtencion" required />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
                             <label class="">Estatus</label>
                             <select class="form-control form-control-sm" name="Estatus" id="Estatus">
                                 <option value="1">Activo</option>
@@ -252,6 +258,7 @@
                     $('#Id_Estado option[value="' + dataOrigenes[indice].id_Estado + '"]').attr("selected", true);
                     $('#Id_Ciudad option[value="' + dataOrigenes[indice].id_Ciudad + '"]').attr("selected", true);
                     $('#Id_Colonia option[value="' + dataOrigenes[indice].id_Colonia + '"]').attr("selected", true);
+                    $("#HoraAtencion").val(dataOrigenes[indice].horaAtencion);
                     $("#modalDiv").modal("show");
                 } catch (error) {
                     dToast("error", "Error al tratar de editar, intenta recargar la página.", "Error");
