--- a/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
@@ -289,8 +289,8 @@
                     $("#table-info").append(`
                         <tr>
                             <td>${nCon(key.nombre)}</td>
-                            <td><input type="checkbox" ${fisica}></td>
-                            <td><input type="checkbox" ${mandatario}></td>
+                            <td><input type="checkbox" ${fisica} style="pointer-events: none;"></td>
+                            <td><input type="checkbox" ${mandatario} style="pointer-events: none;"></td>
                             <td>${nCon(key.tiempo_Entrega)}</td>
                             <td>
                                 <a href="#">
