--- a/KLS_WEB/KLS_WEB/Views/Clients/formClients.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/formClients.cshtml
@@ -318,8 +318,8 @@
                     $("#OtraRed").val(res.otraRed);
                     $("#Banco").val(res.banco);
                     $("#Cuenta").val(res.cuenta);
-                    $("#Ejecutivo").val(res.cuenta);
-                    $("#Comentario").val(res.cuenta);
+                    $("#Ejecutivo").val(res.ejecutivo);
+                    $("#Comentario").val(res.comentario);
                 }).fail(function (error, xhr, status) {
                     console.log(error);
                 });
